--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header class="header">
-      <input type="number" min="-99999" max="99999" class="input" placeholder="Enter value...">
-      <button>Add</button>
+      <input id="addNodeInput" type="number" min="-99999" max="99999" class="input" placeholder="Enter value...">
+      <button id="addNodeButton">Insert</button>
     </header>
     <main>
       <canvas id="canvas"></canvas>
