fixed comparator functions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="header">
-      <input id="addNodeInput" type="number" min="-99999" max="99999" class="input" placeholder="Enter value...">
+      <input id="addNodeInput" type="number" maxlength="5" class="input" placeholder="Enter value...">
       <button id="addNodeButton">Insert</button>
     </header>
     <main>
