--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <header class="header">
       <input id="addNodeInput" type="number" maxlength="5" class="input" placeholder="Enter value...">
       <button id="addNodeButton">Insert</button>
+      <input id="searchNodeInput" type="number" maxlength="5" class="input" placeholder="Enter value...">
+      <button id="searchNodeButton">Search</button>
     </header>
     <main>
       <canvas id="canvas"></canvas>
